# cull

./: .gitignore  README.md  demo.tape  make_gif.py  pyproject.toml
cull/: __main__.py  cli.py  scan.py  tui.py
pro/: README.md  cullignore_templates.md  devcull_tui.py  notify_on_clean.ps1  setup_weekly_clean_unix.sh  setup_weekly_clean_windows.ps1
tests/: test_scan.py
