[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cull"
version = "0.1.0"
description = "remove stale dev cache directories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["developer-tools", "cache", "cleanup", "node_modules"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cull = "cull.cli:cli"

[project.urls]
Repository = "https://github.com/gnomecromancer/cull"

[tool.setuptools.packages.find]
where = ["."]
include = ["cull*"]
